[package]
name = "rss-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "macros"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
color-eyre = "0.6.5"
moka = { version = "0.12.11", features = ["future"] }
parking_lot = "0.12.5"
reqwest = { version = "0.12.24", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zstd = "0.13.3"
